# rest_parser

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/src/: main.rs
rest_to_curl/: Cargo.toml
rest_to_curl/src/: main.rs
src/: format.rs  headers.rs  lexer.rs  lib.rs  parser.rs  template.rs
test_data/: http_bin.http  jetbrains.http
