[package]
name = "rest_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.82", features=["backtrace"]}
base64 = "^0.21.7"
derive_more = {version = "1.0.0-beta.6", features = ["debug", "deref", "deref_mut", "display", "from", "from_str"]}

nom = "7.1.3"
indexmap = {version = "^2.0.1", features = ["serde"]}
httparse = "1.8.0"
url = { version = "2.5.0", features = ["serde"] }
